[gd_scene load_steps=6 format=3 uid="uid://ba008t2jdllj1"]

[ext_resource type="Script" path="res://scripts/archery/score_board.gd" id="1_cs6sq"]
[ext_resource type="FontFile" uid="uid://bbs8pqknk7fsf" path="res://assets/fonts/Kenney Blocks.ttf" id="1_o8qga"]

[sub_resource type="LabelSettings" id="LabelSettings_3txo1"]
font = ExtResource("1_o8qga")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_ov24f"]
font = ExtResource("1_o8qga")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_il4po"]
font = ExtResource("1_o8qga")
font_size = 25

[node name="ScoreBoard" type="ColorRect"]
offset_right = 93.0
offset_bottom = 131.0
color = Color(0, 0.0632009, 0.194748, 1)
script = ExtResource("1_cs6sq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_right = 48.0
offset_bottom = 132.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="score_1" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1."
label_settings = SubResource("LabelSettings_3txo1")
vertical_alignment = 1

[node name="score_2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "2."
label_settings = SubResource("LabelSettings_ov24f")

[node name="score_3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "3."
label_settings = SubResource("LabelSettings_il4po")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_right = 110.0
offset_bottom = 132.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="score_1" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_3txo1")
vertical_alignment = 1

[node name="score_2" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ov24f")

[node name="score_3" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_il4po")
